oxiplate-derive/tests/broken/extends/extends-similar-variable-name.stderr
error[E0609]: no field `title` on type `&AbsoluteData`
 --> templates/extends-wrapper.html.oxip
  |
  | <title>{{ title }}</title>
  |           ^^^^^ unknown field
  |
help: a field with a similar name exists
  |
2 - <title>{{ title }}</title>
2 + <title>{{ tile }}</title>
  |
